tests/baselines/reference/declarationEmitBundleWithAmbientReferences.errors.txt
src/conditional_directive_field.ts(4,2): error TS2322: Type 'null' is not assignable to type 'T<string>'.


==== lib/lib.d.ts (0 errors) ====
    declare module "lib/result" {
        export type Result<E extends Error, T> = (E & Failure<E>) | (T & Success<T>);
        export interface Failure<E extends Error> { }
        export interface Success<T> { }
    }
    
==== src/datastore_result.ts (0 errors) ====
    import { Result } from "lib/result";
    
    export type T<T> = Result<Error, T>;
    
==== src/conditional_directive_field.ts (1 errors) ====
    import * as DatastoreResult from "src/datastore_result";
    
    export const build = (): DatastoreResult.T<string> => {
    	return null;
    	~~~~~~
!!! error TS2322: Type 'null' is not assignable to type 'T<string>'.
    };
    